tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#getMarkerType().mjava
	protected String getMarkerType() {
		return PHPProblemIdentifier.MARKER_TYPE_ID;
	}

